Fix justified alignment of example translations

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -69,6 +69,7 @@ body {
   }
 
   &__translation {
+    margin: 0;
     text-align: justify;
   }
 }
